primeiros testes enviados 1